# Utils

./: .gitignore  CMakeLists.txt  ClipboardUtil.cpp  ClipboardUtil.h  DatabaseController.h  DatabaseControllercpp.cpp  LogMessage.cpp  LogMessage.h  LogRouter.cpp  LogRouter.h  MD5.cpp  NetworkConnection.cpp  NetworkConnection.h  ReadMe.txt  Utils.cpp  Utils.h  Utils.sln  Utils.vcxproj  buildAll.bat  database.cpp  envVars.bat  envVars.sh  envVarsDB.sh  gen_linux.sh  gen_linux_codeblocks.sh  gen_vs2015.bat  gen_vs2015Manual.bat  gen_vs2017.bat  gen_vs2017Manual.bat  gen_vs2019.bat  gen_vs2022.bat  gen_vsManual.bat  similarImage.cpp
CFGUtils/: CFGReader.cpp  CFGReader.h  CFGUtils.cpp  CFGUtils.filters  CFGUtils.h  CFGUtils.vcxproj  CFGUtils.vcxproj.filters  CMakeLists.txt  cfgOption.cpp
CFGUtils/CFGUtilsTest/: CFGUtilsTest.cpp  CFGUtilsTest.vcxproj  CFGUtilsTest.vcxproj.filters  ReadMe.txt  stdafx.cpp  test.txt
CommandLineUtils/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  CommandLineUtils.cpp  CommandLineUtils.h  CommandLineUtils.vcxproj  CommandLineUtils.vcxproj.filters  ReadMe.txt
CurlUtils/: CMakeLists.txt  CurlUtils.cpp  CurlUtils.h
CurlUtils/libcurl/lib/win32/: libcurl_a.lib
DBUtils/: DBUtils.vcxproj  DBUtils.vcxproj.filters  DatabaseControllercpp.cpp  ReadMe.txt  database.cpp
EmailUtils/: CMakeLists.txt  EmailUtils.cpp  EmailUtils.h
EmailUtils/curl/: readme.txt
EmailUtils/curl/win32/lib/x86/: test.txt
FileUtils/: CMakeLists.txt  CSVHandler.cpp  CSVHandler.h  DocumentTags.cpp  DocumentTags.h  FileStruct.cpp  FileStruct.h  FileUtils.cpp  FileUtils.filters  FileUtils.h  FileUtils.vcxproj  directory.cpp  directory.h
FileUtils/myFileDirDllTest/: ReadMe.txt  myFileDirDllTest.cpp  myFileDirDllTest.vcxproj  myFileDirDllTest.vcxproj.filters  stdafx.cpp
GameUtils/: BitmapFont.cpp  BitmapFont.h  Button.h  CMakeLists.txt  GameUtils.vcxproj  GameUtils.vcxproj.filters  GraphicsPrimitives.cpp  GraphicsPrimitives.h  Input.h  Observee.cpp  Observee.h  Observer.cpp  Observer.h  OptionMenu.cpp  OptionMenu.h  RenderController.cpp  RenderController.h  RenderObject.h  Scene.h  ScreenText.cpp  ScreenText.h  SoundUtils.cpp  SoundUtils.h  StockFontData.h  TileImage.cpp  TileImage.h
HashUtils/: CMakeLists.txt  HashUtils.vcxproj  HashUtils.vcxproj.filters  MD5.cpp  MD5.h  ReadMe.txt
LogUtils/: CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h  LogMessage.cpp  LogMessage.h  LogRouter.cpp  LogRouter.h  LogUtils.vcxproj  LogUtils.vcxproj.filters  LogfileOutput.cpp  LogfileOutput.h  ReadMe.txt  TCPOutput.cpp  TCPOutput.h  WindowsEventLogOutput.cpp  WindowsEventLogOutput.h
NetUtils/: CMakeLists.txt  Client.cpp  Client.h  NetUtils.cpp  NetUtils.h  TCPServer.cpp  TCPServer.h  UDPServer.cpp  UDPServer.h
SQLiteUtils/: BaseDBInterface.h  CMakeLists.txt  DatabaseController.h  DatabaseControllercpp.cpp  DateTime.cpp  DateTime.h  ReadMe.txt  SQLiteUtils.cpp  SQLiteUtils.h  SQLiteUtils.vcxproj  SQLiteUtils.vcxproj.filters
SQLiteUtils/SQLite3/: readme.txt
SQLiteUtils/SQLite3/lib/x86/: sqlite3.lib  test.txt
SQLiteUtils/SQLite3/src/: build.sh  sqlite3.exp
SQLiteUtils/SQLite3/win32/lib/64bit/: test.txt
StringUtils/: CMakeLists.txt  DocumentTags.cpp  DocumentTags.h  ReadMe.txt  SpellChecker.cpp  SpellChecker.h  StringUtils.cpp  StringUtils.h  StringUtils.vcxproj  StringUtils.vcxproj.filters  Trie.cpp  Trie.h
TCPUtils/: CMakeLists.txt  Client.cpp  Client.h  ReadMe.txt  Server.cpp  Server.h  TCPServer.cpp  TCPServer.h  TCPUtils.cpp  TCPUtils.h  TCPUtils.vcxproj  TCPUtils.vcxproj.filters  UDPServer.cpp  UDPServer.h
TaggingUtils/: CMakeLists.txt  TaggingUtils.cpp  TaggingUtils.h
WindowsUtils/: CMakeLists.txt  ClipboardUtil.cpp  ClipboardUtil.h  ProgressBar.cpp  ProgressBar.h  ReadMe.txt  WindowsUtils.cpp  WindowsUtils.h  WindowsUtils.vcxproj  WindowsUtils.vcxproj.filters
